tests/error/poly_errors/inst_return_mismatch.err
Error: Type mismatch (at $FILE:17:14)
   | 
15 | @guppy(module)
16 | def main(x: bool) -> None:
17 |     y: None = foo(x)
   |               ^^^^^^ Expected expression of type `None`, got `bool`

Guppy compilation failed due to 1 previous error
